# LEO-DTF

./: .gitignore  README.md  pyproject.toml  test_imports.py
docs/: bibliography_todo.md  claim_audit_report.md  local_setup.md  long_run_progress_report.md  overnight_progress_report.md  placeholder_citation_report.md  reproducibility_checklist.md  research_phase2_notes.md  submission_readiness_matrix.md  supervisor_review_checklist.md
paper/: main.tex  refs.bib
scripts/: agent_guard.py  check_paper_sanity.py  debug_coordinate_grid_consistency.py  debug_forward_model_consistency.py  debug_generate_root_cause_report.py  debug_oracle_nuisance_baseline.py  debug_posterior_flatness.py  debug_posterior_score_surface.py  diagnose_crlb_sensitivity.py  export_posterior_diagnostic.py  generate_synthetic_dataset.py  list_placeholder_citations.py  make_paper_figures.py  research_arduino_firmware_bringup_plan.py  research_autorun.py  research_baseline_comparison.py  research_build_experiment_index.py  research_carrier_band_threshold.py  research_claim_audit.py  research_claim_audit_triage.py  research_claim_boundary_map.py  research_claim_evidence_audit.py  research_claim_patch_proposal.py  research_consolidated_evidence_table.py  research_dtoi_derivation.py  research_duration_cadence_sensitivity.py  research_full_rederive_report.py  research_generate_progress_report.py  research_geometry_placement_robustness.py  research_h0_board_discovery.py  research_h1b_conducted_capture_plan.py  research_h1c_controlled_capture_runner.py  research_h2_iq_extraction_scaffold.py  (+40 more)
(+105 files in other folders)
