[project]
name = "LEO-DTF"
version = "0.1.0"
description = "LEO Doppler-Time Fingerprint for coarse localization and uplink state estimation"
authors = [
    {name = "Hermes Agent", email = "hermes@example.com"}
]
dependencies = [
    "numpy",
    "sgp4",
    "scipy",
    "matplotlib",
    "pyyaml",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
ml = [
    "torch",
]
